@@ -217,6 +217,7 @@
     "join_group": "Join Group",
     "web_browser_chat": "Web browser chat",
     "steam_client_chat": "Steam Client chat",
+    "available": "Available",
     "achievements": {
         "option": "Show achievements on store pages",
         "achievements": "Achievements",
